Implement Footer phase 2 : make responsive

--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -1,10 +1,12 @@
-.footer {
-    padding: 5vh 5vh 5vh 5vh;
+.footer_settings {
     position: relative;
     background: #0C356A;
     color: #D9D9D9;
-    height: 40vh;
+    height: auto;
     border-radius: 10vh 0 0 0;
+}
+
+.footer {
     display: flex;
     justify-content: right;
 }
@@ -17,7 +19,6 @@
 
 }
 
-
 .footer h2 {
     font-weight: bold;
     text-align: center;
@@ -29,11 +30,53 @@
 }
 
 .logo {
-    margin-top: 20vh;
-
+    margin: auto;
 }
 
 .footer h2, h3, h5:hover {
     font-weight: bold;
     transition-duration: 100ms;
+}
+
+.follow_us {
+    text-align: center;
+    display: flex;
+    justify-content: center;
+}
+
+.follow_us div {
+    margin-left: 3vw;
+    margin-top: auto;
+    margin-bottom: auto;
+    cursor: pointer;
+}
+
+.follow_us h4 {
+    font-weight: normal;
+}
+
+@media screen and (max-width: 500px) {
+    .footer_settings {
+        padding: 1vh 1vh 1vh 1vh;
+    }
+
+    .footer {
+        display: block;
+        justify-content: center;
+    }
+
+    .footer div {
+        margin-top: 10vh;
+    }
+
+    .footer h2 {
+        font-weight: bold;
+        text-align: left;
+    }
+
+    .footer h5 {
+        font-weight: normal;
+        text-align: left;
+    }
+
 }
