--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -1,4 +1,5 @@
 .footer_settings {
+    padding-top: 5vh;
     position: relative;
     background: #0C356A;
     color: #D9D9D9;
@@ -19,12 +20,13 @@
 
 }
 
-.footer h2 {
+.footer h3 {
+    margin-bottom: 3vh;
     font-weight: bold;
     text-align: center;
 }
 
-.footer h5 {
+.footer h6 {
     font-weight: normal;
     text-align: center;
 }
@@ -33,12 +35,13 @@
     margin: auto;
 }
 
-.footer h2, h3, h5:hover {
+.footer h3, h4, h6:hover {
     font-weight: bold;
     transition-duration: 100ms;
 }
 
 .follow_us {
+    height: 10vh;
     text-align: center;
     display: flex;
     justify-content: center;
@@ -51,7 +54,7 @@
     cursor: pointer;
 }
 
-.follow_us h4 {
+.follow_us h5 {
     font-weight: normal;
 }
 
@@ -69,12 +72,12 @@
         margin-top: 10vh;
     }
 
-    .footer h2 {
+    .footer h3 {
         font-weight: bold;
         text-align: left;
     }
 
-    .footer h5 {
+    .footer h6 {
         font-weight: normal;
         text-align: left;
     }
