Make landing screen clear and responsive

--- a/src/screens/landing_screen.css
+++ b/src/screens/landing_screen.css
@@ -1,12 +1,8 @@
 .landing_screen {
-    position: relative;
+    position: absolute;
     width: 100%;
 }
 
-.landing_screen_navbar {
-    width: 100%;
-    position: fixed;
-}
 
 .section {
     height: 100vh;
