--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,20 @@
 ::-webkit-scrollbar {
     display: none;
 }
+
+.navbar_position {
+    width: 100%;
+    position: fixed;
+    z-index: 1;
+}
+
+.landing_screen {
+    position: absolute;
+}
+
+.footer {
+    position: relative;
+    /*z-index: 1;*/
+    width: 100%;
+
+}
