--- a/src/components/IncrementBtn_component.css
+++ b/src/components/IncrementBtn_component.css
@@ -9,13 +9,14 @@
 
 .input-btn {
   outline: none;
-  width:70%;
+  width:90%;
   background-color: #E7E5DF;
 
 }
 h5 {
   display: flex;
   justify-content: center;
+  width: 120px;
 
 }
 
@@ -25,4 +26,24 @@ h5 {
   justify-content: center;
   border-radius: 20px;
   outline: none;
+  background-color: #E7E5DF;
+}
+
+.inc-btn-component {
+  display: flex;
+  justify-content: center;
+}
+.inc-btn-withHeader {
+  display: flex;
+  flex-direction: column;
+  width: 40%;
+  max-width: 180px;
+  justify-content: center;
+  align-items: center;
+}
+
+@media screen and (max-width: 700px) {
+  .test6{
+    width: 120px;
+  }
 }
