--- a/src/components/Location_btn_component.css
+++ b/src/components/Location_btn_component.css
@@ -59,13 +59,14 @@
     color: black;
     border:2px solid #000000;
     border-radius: 20px;
+    height:8vh
   }
 
-  .button1{
+  .search-btn {
     border-radius: 40px;
     background-color: #E7E5DF;
     width: auto;
-    height: 10px;
+    height: 100%;
 
 
   }
@@ -83,6 +84,9 @@
     height: 10px;
   }
   .search-inner{
+    height: 58px;
+  }
+  .search-container{
     height: 58px;
   }
 }
