--- a/src/components/PriceRange_component.css
+++ b/src/components/PriceRange_component.css
@@ -2,7 +2,7 @@
 .slider {
     height: 10px;
     max-width: 100%;
-    background-color: #f00000;
+    background-color: #0C356A;
     border-radius: 5px;
     margin-top: 10px;
     display: flex;
