Components modified and created

--- a/src/screens/savedJourneys.css
+++ b/src/screens/savedJourneys.css
@@ -1,13 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;0,900;1,400;1,700&display=swap');
 
-.acmd {
+.sj {
     margin-top: 1%;
     margin-bottom: 4%;
     margin-left: 5%;
     margin-right: 5%;
 }
 
-.acmd-heading {
+.sj-heading {
     color: #0C356A;
     font-family: 'Lato', sans-serif;
     font-weight: 700;
@@ -18,24 +18,4 @@
     text-align: center;
     align-items: center;
     margin-bottom: 1%;
-}
-
-.acmd-btn {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.acmd-cards {
-    margin-top: 2%;
-    margin-bottom: 2%;
-}
-
-
-@media screen and (max-width: 768px) {
-    .acmd-btn {
-        margin-top: 30px;
-        margin-bottom: 20px;
-    }
 }
