--- a/src/components/hotelCard.css
+++ b/src/components/hotelCard.css
@@ -5,7 +5,6 @@
     width: 300px;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
     background-color: #ffffff;
     box-shadow: 0 0 10px rgba(229, 188, 8, 0.3);
     color: black;
@@ -25,7 +24,7 @@
 
 .hotel-crd-image {
     width: 300px;
-    height: auto;
+    height: 200px;
     border-top-left-radius: 40px;
     border-top-right-radius: 40px;
     object-fit: cover;
@@ -34,10 +33,15 @@
 .hotel-crd-title {
     font-family: 'Lato', sans-serif;
     font-weight: 700;
-    font-size: 150%;
+    font-size: 130%;
     display: flex;
+    margin-top: 15px;
+    margin-left: 30px;
+    margin-right: 30px;
+    margin-bottom: 10px;
     justify-content: center;
     align-items: center;
+    text-align: center;
 }
 
 .hotel-crd-location {
@@ -55,7 +59,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-bottom: 1%;
+    text-align: center;
     margin-left: 10px;
 }
 
@@ -64,15 +68,14 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    margin-top: 10px;
+    margin-bottom: 5px;
+    margin-top: 5px;
 }
 
 .hotel-crd-tags-title {
     font-family: 'Lato', sans-serif;
     font-weight: 400;
     font-size: 100%;
-    margin-top: 10px;
-    margin-left: 10px;
 }
 
 .hotel-crd-tag {
@@ -84,7 +87,6 @@
     font-style: italic;
     font-weight: 700;
     font-size: 80%;
-    margin-top: 10px;
     margin-left: 10px;
 }
 
