--- a/src/components/Location_btn_component.css
+++ b/src/components/Location_btn_component.css
@@ -34,6 +34,7 @@
     display: flex;
     flex-direction: column;
     border: 1px solid white;
+    position: absolute;
   }
   
   .dropdown:empty {
@@ -44,8 +45,9 @@
     cursor: pointer;
     text-align: start;
     margin: 2px 0;
-    background-color: rgb(124, 124, 124);
+    background-color: none;
     display: flex;
+
   }
   
   input {
