--- a/src/components/DestinationCard.css
+++ b/src/components/DestinationCard.css
@@ -7,12 +7,12 @@
     align-items: center;
     justify-content: center;
     background-color: #ffffff;
-    box-shadow: 0 0 10px rgba(229, 188, 8, 0.3);
+    box-shadow: 0 0 6px rgb(160, 255, 246);
     color: black;
     position: relative;
     border-radius: 40px;
-    backdrop-filter: blur(10px);
-    transform: translate(0, -2px);
+    backdrop-filter: blur(20px);
+    transform: translate(0, 10px);
     transition: transform 0.5s, box-shadow 0.2s;
     margin: 40px 30px 40px 30px;
     
@@ -20,6 +20,7 @@
 
 .crd-containter:hover {
     transform: scale(1.01);
+    box-shadow: 0 0 10px rgba(63, 255, 239, 1);
 }
 
 
