--- a/src/screens/destinationRecom.css
+++ b/src/screens/destinationRecom.css
@@ -1,10 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;0,900;1,400;1,700&display=swap');
 
 .dst {
-    margin-top: 1%;
-    margin-bottom: 4%;
-    margin-left: 5%;
-    margin-right: 5%;
+    background-image: url("../images/background_nil2.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.dst {
+    padding-top: 1%;
+    padding: 4%;
+    padding-left: 5%;
+    padding-right: 5%;
 }
 
 .dst-heading {
@@ -12,7 +18,7 @@
     font-family: 'Lato', sans-serif;
     font-weight: 700;
     font-style: italic;
-    font-size: 250%;
+    font-size: 280%;
     display: flex;
     justify-content: center;
     text-align: center;
@@ -30,6 +36,12 @@
 .dst-cards {
     margin-top: 2%;
     margin-bottom: 2%;
+    transform: translate(0, 10px);
+    transition: transform 2.5s;
+}
+
+.dst-cards:hover {
+    transform: scale(1.01);
 }
 
 
