--- a/src/screens/summary.css
+++ b/src/screens/summary.css
@@ -1,10 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;0,900;1,400;1,700&display=swap');
 
 .smr {
-    margin-top: 2%;
-    margin-bottom: 4%;
-    margin-left: 5%;
-    margin-right: 5%;
+    padding: 2%;
+    padding-bottom: 4%;
+    padding-left: 5%;
+    padding-right: 5%;
+    background-image: url("../images/background_nil2.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 .smr-heading {
@@ -26,8 +29,7 @@
     font-weight: 700;
     font-style: italic;
     font-size: 250%;
-    margin-left: 15%;
-    margin-bottom: 1%;
+    text-align: center;
 }
 
 .smr-sub-heading-first {
