--- a/src/components/pagination.css
+++ b/src/components/pagination.css
@@ -19,8 +19,9 @@
     border: none;
     padding: 8px 16px;
     margin: 2px;
+    margin-left: 10px;
     cursor: pointer;
-    border-radius: 4px;
+    border-radius: 50%;
     transition: background-color 0.3s;
 }
 
