--- a/src/screens/roomSelection.css
+++ b/src/screens/roomSelection.css
@@ -1,16 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;0,900;1,400;1,700&display=swap');
 
 .rs {
-    margin-top: 1%;
-    margin-bottom: 4%;
-    margin-left: 5%;
-    margin-right: 5%;
+    padding-top: 1%;
+    padding-bottom: 4%;
+    padding-left: 5%;
+    padding-right: 5%;
+    background-image: url("../images/background_nil2.jpg");
+    background-size: contain;
+    background-repeat: repeat;
 }
 
 .rs-hotel-img {
     width: 800px;
     height: 400px;
-    object-fit: cover;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -26,7 +28,7 @@
     font-family: 'Lato', sans-serif;
     font-weight: 700;
     font-style: italic;
-    font-size: 250%;
+    font-size: 280%;
     display: flex;
     justify-content: center;
     text-align: center;
