--- a/src/components/IncrementBtn_component.css
+++ b/src/components/IncrementBtn_component.css
@@ -9,14 +9,16 @@
 
 .input-btn {
   outline: none;
-  width:90%;
+  width:80%;
+  min-width: 50px;
   background-color: #E7E5DF;
-
+  border:0px;
 }
+
 h5 {
   display: flex;
   justify-content: center;
-  width: 120px;
+  width: 160px;
 
 }
 
@@ -27,6 +29,7 @@ h5 {
   border-radius: 20px;
   outline: none;
   background-color: #E7E5DF;
+
 }
 
 .inc-btn-component {
