--- a/src/components/DestinationCard.css
+++ b/src/components/DestinationCard.css
@@ -15,7 +15,8 @@
     transform: translate(0, 10px);
     transition: transform 0.5s, box-shadow 0.2s;
     margin: 40px 30px 40px 30px;
-    
+        background-image: url("../images/card.jpg");
+            background-size: contain;
 }
 
 .crd-containter:hover {
