--- a/src/components/DestinationCard.css
+++ b/src/components/DestinationCard.css
@@ -27,7 +27,7 @@
 
 .crd-image {
     width: 300px;
-    height: auto;
+    height: 150px;
     border-top-left-radius: 40px;
     border-top-right-radius: 40px;
     object-fit: cover;
