--- a/src/components/Destination_buttons.css
+++ b/src/components/Destination_buttons.css
@@ -10,22 +10,32 @@
     justify-content: center;
     text-align: center;
 } 
+.PlanYourNextTrip {
+    justify-self: center;
+    text-align: center;
+    color:#0C356A;
+    font-size: 50px;
+    font-style: italic;
+    width:fit-content
+}
 
-h2{
+.h2{
     text-align: center;
 }
 .explore-btn{
+    font-size: 16px !important;
+    color:rgb(0, 0, 86) !important;
     background-color: #E7BB41;
     border-radius: 20px;
-    font-size: larger;
-    color: black;
+    border-width: 0px;
     margin-bottom: 40px;
-    padding-left: 30px;
-    padding-right: 30px;
+    padding-left: 20px;
+    padding-right: 20px;
     margin-bottom: 30px;
 }
 
 .locationDropdown{
-    padding-top: 50px;
+    padding-top: 30px;
 }
+
 
