--- a/src/screens/destinationRecom.css
+++ b/src/screens/destinationRecom.css
@@ -7,10 +7,9 @@
 }
 
 .dst {
-    padding-top: 1%;
-    padding: 4%;
     padding-left: 5%;
     padding-right: 5%;
+    padding-bottom: 5%;
 }
 
 .dst-heading {
